@@ -59,7 +59,7 @@
         <dependency>
           <groupId>net.sourceforge.htmlunit</groupId>
           <artifactId>htmlunit</artifactId>
-          <version>2.47.1</version>
+          <version>2.51.0</version>
           <scope>test</scope>
         </dependency>
     </dependencies>
@@ -70,12 +70,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <configuration>
-                    <argLine>
-                        --illegal-access=permit
-                    </argLine>
                     <encoding>UTF-8</encoding>
                     <argLine>
-                        --illegal-access=permit
+                        --add-opens java.base/java.time=ALL-UNNAMED
                     </argLine>
                     <argLine>${failsafeArgLine}</argLine>
                     <failIfNoTests>false</failIfNoTests>
@@ -138,11 +135,6 @@
                         <groupId>org.junit.jupiter</groupId>
                         <artifactId>junit-jupiter-engine</artifactId>
                         <version>${junit.jupiter.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.junit.platform</groupId>
-                        <artifactId>junit-platform-surefire-provider</artifactId>
-                        <version>${junit.platform.surefire.version}</version>
                     </dependency>
                 </dependencies>
             </plugin>
